--- a/app/src/main/res/layout/chip_shirt_fragment.xml
+++ b/app/src/main/res/layout/chip_shirt_fragment.xml
@@ -1,13 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.chips.shirt.ChipShirtFragment">
 
-    <TextView
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/shirt_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimaryDark"
+        app:titleTextColor="@color/white"
+        app:navigationIcon="@drawable/ic_arrow_back"/>
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
+        android:layout_below="@id/shirt_toolbar"
+        android:paddingStart="24dp">
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/all_shirt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="All"
+            app:chipCornerRadius="45dp"
+            app:chipEndPadding="12dp"
+            app:chipStartPadding="12dp" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/trouser_shirt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Trousers"
+            app:chipCornerRadius="45dp"
+            app:chipEndPadding="8dp"
+            app:chipStartPadding="8dp" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/shirts_shirt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Shirts"
+            app:chipBackgroundColor="@color/colorPrimary"
+            app:chipIconEnabled="true"
+            android:textColor="@color/white"
+            app:chipCornerRadius="45dp"
+            app:chipEndPadding="8dp"
+            app:chipStartPadding="8dp" />
+
+    </com.google.android.material.chip.ChipGroup>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chips_shirt_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_below="@id/chip_group"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="8dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:listitem="@layout/male_wear_list_item" />
 
-</FrameLayout>
+</RelativeLayout>
