--- a/app/src/main/res/layout/fragment_add_female_cloths.xml
+++ b/app/src/main/res/layout/fragment_add_female_cloths.xml
@@ -47,7 +47,7 @@
             android:layout_height="match_parent"
             android:background="@color/gray"
             android:layout_gravity="center"
-            android:inputType="textPersonName"
+            android:inputType="textCapSentences"
             android:textCursorDrawable="@null"
             android:drawablePadding="12dp"/>
 
@@ -85,7 +85,7 @@
             android:layout_height="match_parent"
             android:background="@color/gray"
             android:layout_gravity="center"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:textCursorDrawable="@null"
             android:drawablePadding="12dp"/>
 
@@ -108,7 +108,7 @@
             android:layout_height="match_parent"
             android:background="@color/gray"
             android:layout_gravity="center"
-            android:inputType="numberDecimal"
+            android:inputType="number"
             android:textCursorDrawable="@null"
             android:drawablePadding="12dp"/>
 
@@ -131,7 +131,7 @@
             android:layout_height="match_parent"
             android:background="@color/gray"
             android:layout_gravity="center"
-            android:inputType="numberDecimal"
+            android:inputType="number"
             android:textCursorDrawable="@null"
             android:drawablePadding="12dp"/>
 
@@ -154,7 +154,7 @@
             android:layout_height="match_parent"
             android:background="@color/gray"
             android:layout_gravity="center"
-            android:inputType="numberDecimal"
+            android:inputType="number"
             android:textCursorDrawable="@null"
             android:drawablePadding="12dp"/>
 
