--- a/app/src/main/res/layout/fragment_add_male_cloth.xml
+++ b/app/src/main/res/layout/fragment_add_male_cloth.xml
@@ -46,7 +46,7 @@
                     android:layout_height="match_parent"
                     android:background="@color/gray"
                     android:layout_gravity="center"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapSentences"
                     android:textCursorDrawable="@null"
                     android:drawablePadding="12dp"/>
 
@@ -84,7 +84,7 @@
                     android:layout_height="match_parent"
                     android:background="@color/gray"
                     android:layout_gravity="center"
-                    android:inputType="text"
+                    android:inputType="textCapSentences"
                     android:textCursorDrawable="@null"
                     android:drawablePadding="12dp"/>
 
@@ -107,7 +107,7 @@
                     android:layout_height="match_parent"
                     android:background="@color/gray"
                     android:layout_gravity="center"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
                     android:textCursorDrawable="@null"
                     android:drawablePadding="12dp"/>
 
@@ -130,7 +130,7 @@
                     android:layout_height="match_parent"
                     android:background="@color/gray"
                     android:layout_gravity="center"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
                     android:textCursorDrawable="@null"
                     android:drawablePadding="12dp"/>
 
@@ -153,7 +153,7 @@
                     android:layout_height="match_parent"
                     android:background="@color/gray"
                     android:layout_gravity="center"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
                     android:textCursorDrawable="@null"
                     android:drawablePadding="12dp"/>
 
