--- a/app/src/main/res/layout/female_fragment.xml
+++ b/app/src/main/res/layout/female_fragment.xml
@@ -80,5 +80,16 @@
         app:elevation="8dp"
         app:tint="@color/white" />
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/spinKit"
+        style="@style/SpinKitView.FadingCircle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="16dp"
+        app:SpinKit_Color="@color/colorPrimary"/>
+
 
 </RelativeLayout>
